feat: 实现切换环境的功能

--- a/example/style.tuio/index.css
+++ b/example/style.tuio/index.css
@@ -20,7 +20,7 @@ body {
 #title {
   font-size: 32px;
   font-weight: bold;
-  color: blue;
+  color: purple;
 }
 
 @media (prefers-color-scheme: light) {
